--- a/css/index.css
+++ b/css/index.css
@@ -1,66 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Oxygen');
-body {
-    margin: 0 auto;
-    font-family: 'Oxygen', sans-serif;
-    height: 5000px;
-}
-
-header.nav-bar {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    background-color: white;
-    font-size: 1.6em;
-    padding: 1em 0em 1em 0;
-    box-shadow: -3px 1px 12px black;
-    overflow: hidden;
-    z-index: 1000;
-}
-
-header.nav-bar a {
-    float: left;
-    margin-left: 1em;
-}
-
-header.nav-bar a:link,
-header.nav-bar a:hover,
-header.nav-bar a:active,
-header.nav-bar a:visited {
-    text-decoration: none;
-    color: black;
-}
-
-header.nav-bar a img {
-    width: 1.5em;
-    height: 2em;
-    margin-bottom: -0.5em;
-    margin-left: -0.5em;
-}
-
-header.nav-bar span.icon-menu {
-    float: right;
-    margin-right: 1em;
-    margin-top: 0.5em;
-    cursor: pointer;
-}
-
 section.intro-container {
     width: 100%;
     margin: 7em auto 0 auto;
     padding: 3em 0 3em;
     text-align: center;
     font-size: 1.2em;
-    background: url("../images/logo.png") center center no-repeat;
-    background-attachment: fixed;
 }
 
 div.intro-content {
-    padding-top: 8em;
-    padding-bottom: 3em;
+    padding-top: 4em;
     margin: -5em auto 0 auto;
     width: 100%;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.71);
+    color: black;
+    background-color: white;
 }
 
 div.intro-content span.title {
@@ -83,7 +34,7 @@ div.intro-content span.title:after {
     left: 0;
     width: 0%;
     border-bottom: 1px solid red;
-    transition: 0.4s;
+    transition: 1s;
     animation-name: underline;
     animation-duration: 2s;
     animation-fill-mode: forwards;
@@ -96,28 +47,8 @@ div.intro-content span.title:after {
     }
 }
 
-div.testimonials-container {
-    padding: 2em 0 2em 0;
-    width: 100%;
-    overflow: hidden;
-    margin: 2em auto 0 auto;
-    background-color: #0c060673;
-    font-size: 0.9em;
-}
-
-div.testimonial {
-    padding: 1.5em 0 1.5em 0;
-}
-
-div.testimonial blockquote {
-    color: red;
-    padding: 1em;
-    border-left: 2px solid white;
-    border-right: 2px solid white;
-}
-
 div.intro-links {
-    padding: 2em 0 2em 0;
+    padding: 1em 0 1em 0;
 }
 
 div.intro-links a {
@@ -125,7 +56,8 @@ div.intro-links a {
     background-color: black;
     margin: 1em;
     display: inline-block;
-    box-shadow: 0 0 1px 1px rgba(216, 206, 206, 0.959);
+    /*box-shadow: 0 0 2px 2px #888;*/
+    border-radius: 5px;
 }
 
 div.intro-links a:link,
@@ -134,4 +66,186 @@ div.intro-links a:active,
 div.intro-links a:visited {
     color: white;
     text-decoration: none;
+}
+
+div.testimonials-container {
+    padding: 2em 0 2em 0;
+    width: 90%;
+    overflow: hidden;
+    margin: 2em auto 0 auto;
+    background-color: white;
+    color: black;
+    font-size: 0.9em;
+    box-shadow: -2px -1px 17px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 10px;
+}
+
+div.testimonials-container h {
+    font-weight: bolder;
+}
+
+div.testimonial {
+    padding: 1.5em 0 1.5em 0;
+}
+
+div.testimonial blockquote {
+    padding: 1em;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+
+section.branches-wrapper {
+    margin: 0 auto 0 auto;
+    width: 100%;
+}
+
+section.branches-container {
+    margin: 0 auto 2em auto;
+    padding: 2em 0 2em 0;
+    text-align: center;
+}
+
+.icon {
+    margin: 1em auto 1em auto;
+    display: block;
+}
+
+section.branches-container h.branches-title {
+    font-weight: bolder;
+    font-size: 1.4em;
+    color: black;
+    letter-spacing: 0.2em;
+    padding: 1em;
+}
+
+section.branches-container div.widget_wrap {
+    padding-top: 1em;
+}
+
+div.branches-swiper {
+    margin: 4em auto 0em auto;
+    width: 90%;
+}
+
+div.branches-swiper .swiper-slide {
+    width: 80%;
+    background-color: white;
+    box-shadow: inset 0 0 10px #000000;
+}
+
+div.branches-swiper .swiper-slide div.branch-title {
+    text-align: center;
+    padding: 4em 0 1em 0;
+    background-color: rgb(154, 1, 1);
+    color: white;
+}
+
+div.branches-swiper .swiper-slide div.branch-title h {
+    font-size: 1.4em;
+}
+
+div.branches-swiper .swiper-slide div.branch-title p {
+    font-size: 1em;
+    letter-spacing: 0.2em;
+}
+
+div.branches-swiper .swiper-button-black {
+    opacity: 0.6;
+}
+
+div.branches-swiper .swiper-slide div.branch-description {
+    text-align: left;
+    padding: 2em 0 2em 0em;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.branches-swiper .swiper-slide div.branch-description h {
+    font-weight: bolder;
+    margin-top: 1em;
+}
+
+div.branches-swiper .swiper-slide div.branch-description address {
+    font-style: normal;
+    margin-top: 1em;
+}
+
+div.branches-swiper .swiper-slide div.branch-description button {
+    padding: 1em;
+    outline: none;
+    border: none;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    box-shadow: 0 0 2px 2px #888;
+    display: block;
+}
+
+div.branches-swiper .swiper-slide div.branch-description a {
+    display: block;
+    margin-top: 1em;
+    color: green;
+    text-decoration: none;
+}
+
+div.branches-swiper .swiper-slide div.branch-description a:link,
+div.branches-swiper .swiper-slide div.branch-description a:hover,
+div.branches-swiper .swiper-slide div.branch-description a:visited,
+div.branches-swiper .swiper-slide div.branch-description a:active {
+    color: green;
+    text-decoration: none;
+}
+
+section.parallax {
+    width: 100%;
+    margin: 0 auto 0 auto;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 60vh;
+    background-size: cover;
+}
+
+section.bg1 {
+    background-image: url("../images/parallax1.jpg");
+}
+
+section.bg2 {
+    background-image: url("../images/parallax2.jpg");
+}
+
+@media only screen and (min-width: 1224px) {
+    .responsive-container {
+        width: 1000px;
+    }
+    div.testimonials-container {
+        width: 1000px;
+    }
+    div.branches-swiper .swiper-slide {
+        width: 33.3%;
+    }
+}
+
+@media only screen and (min-width: 1824px) {
+    .responsive-container {
+        width: 1000px;
+    }
+    div.testimonials-container {
+        width: 1000px;
+    }
+    div.branches-swiper .swiper-slide {
+        width: 33.3%;
+    }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    .responsive-container {
+        width: 100%;
+    }
+    div.testimonials-container {
+        width: 90%;
+    }
 }
